get sensor list using ScrollView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">getSensorList</string>
+    <string name="sensors_installed">Sensors installed</string>
 </resources>
